[tool.poetry]
name = "data-warehouse-queries"
version = "0.1.0"
description = ""
authors = ["Lydia Stepanek <lydia.stepanek@mongodb.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
dnspython = "1.16.0"
pymongo = {version = "3.8.0", extras = ["tls"]}
black = "^20.8b1"
pandas = "^1.2.3"
bson = "^0.5.10"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
